[tool.poetry]
name = "gopro"
version = "0.1.0"
description = ""
authors = ["BrandonLWhite <brandonlwhite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.1"
open-gopro = "^0.14.1"

[tool.poetry.scripts]
gopro = "gopro.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
